Cleaned up wall of text.